[tool.poetry]
name = "cube-rl"
version = "0.1.0"
description = "Cube problem rl research"
authors = ["Konstantin Klepikov <oformleno@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
gym = "^0.26.2"
install = "^1.3.5"
tensorflow = {url = "https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow-2.15.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
cffi = "^1.16.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
line-length = 88
preview = true

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
max-complexity = 7
